--- a/app/assets/stylesheets/application.tailwind.css
+++ b/app/assets/stylesheets/application.tailwind.css
@@ -4,6 +4,8 @@
 
 /*
 
+use rails tailwindcss:watch to watch for changes
+
 @layer components {
   .btn-primary {
     @apply py-2 px-4 bg-blue-200;
