--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,3 +1,17 @@
-<h1 class="text-3xl font-bold underline">
-    DashboardController#index
-</h1>
+<h1 class="mb-4 text-4xl font-bold leading-none tracking-tight text-gray-900 md:text-5xl lg:text-6xl uppercase">Dashboard Controller Index</h1>
+
+<div class="container mx-auto">
+    <% @form.form_sections.each do |section| %>
+        <form class="block max-w-sm p-6 m-4 bg-white border border-gray-200 rounded-lg shadow-md hover:bg-gray-100">
+            <h5 class="mb-2 text-2xl font-bold tracking-tight text-gray-900"><%= section.title %></h5>
+            <span class="bg-blue-100 text-white text-sm font-medium mr-2 px-2.5 py-0.5 rounded dark:bg-blue-900 dark:text-blue-300"><%= section.subtitle %></span>
+            
+            <% section.form_elements.each do |element| %>
+                <div class="mb-1"><%= element.title %></div>
+                <div class="mb-1"><%= element.subtitle %></div>
+                <div class="mb-1"><%= element.form_element_question_type.name %></div>
+                <div class="mb-1"><%= element.data %></div>
+            <% end %>
+        </form>
+    <% end %>
+</div>
