--- a/app/views/navs/_navbar.html.erb
+++ b/app/views/navs/_navbar.html.erb
@@ -27,8 +27,7 @@
         </div>
     </aside>
     <div class="container mx-auto py-10 h-64 md:w-4/5 w-11/12 px-6">
-        <!-- Remove class [ border-dashed border-2 border-gray-300 ] to remove dotted border -->
-        <div class="w-full h-full rounded border-dashed border-2 border-gray-300">
+        <div class="w-full h-full rounded">
             <%= content %>
         </div>
     </div>
