Add Simple Devise fork to render login related pages

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,11 @@
 
   <body>
     <main>
-      <%= render "navs/navbar", content: yield %>
+      <% if devise_controller? %>
+        <%= yield %>
+        <% else %>
+        <%= render "navs/navbar", content: yield %>
+      <% end %>
     </main>
   </body>
 </html>
